# telemetry_service

./: .env.example  Cargo.toml  README.md  build.rs
docs/: activation-agent-plan.md  deployment-guide.md
scripts/: deploy.ps1
src/: api.rs  autostart.rs  config.rs  error.rs  hardware.rs  location.rs  logging.rs  main.rs  paths.rs  payload.rs  retry.rs  state.rs
