[package]
name = "telemetry_service"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Devices_Geolocation", "Foundation"] }
wmi = "0.14"

[dev-dependencies]
tempfile = "3"
